--- a/source/program-form.html
+++ b/source/program-form.html
@@ -34,85 +34,85 @@
     <section class="picking-program">
       <p class="picking-program__text">Заполните анкету и мы подберем программу питания для Вашего кота</p>
       <form class="picking-program__form" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
+        <fieldset class="picking-program__fieldset">
           <legend class="visually-hidden">Общие данные</legend>
-          <ul>
-            <li class="program-form__item">
-              <label class="picking-program__label" for="name">Имя:<sup>*</sup></label>
+          <ul class="picking-program__list">
+            <li class="picking-program__item">
+              <label class="picking-program__label label" for="name">Имя:<sup>*</sup></label>
               <input class="picking-program__input-text input-text" type="text" id="name" name="name" placeholder="Барсик">
             </li>
-            <li class="program-form__item">
-              <label class="picking-program__label" for="heft">Вес (кг):<sup>*</sup></label>
+            <li class="picking-program__item">
+              <label class="picking-program__label label" for="heft">Вес (кг):<sup>*</sup></label>
               <input class="picking-program__input-text input-text" type="text" id="heft" name="heft" placeholder="7">
             </li>
-            <li class="program-form__item">
-              <label class="picking-program__label" for="age">Возраст (лет):</label>
+            <li class="picking-program__item">
+              <label class="picking-program__label label" for="age">Возраст (лет):</label>
               <input class="picking-program__input-text input-text" type="text" id="age" name="age" placeholder="7">
             </li>
           </ul>
         </fieldset>
-        <fieldset>
+        <fieldset class="picking-program__fieldset">
           <legend class="visually-hidden">Цель программы</legend>
-          <ul>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="diet" id="losing-weight" checked>
-              <label for="losing-weight">Похудение</label>
+          <ul class="picking-program__list">
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="diet" id="losing-weight" checked>
+              <label class="label" for="losing-weight">Похудение</label>
             </li>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="mass" id="mass-gathering">
-              <label for="mass-gathering">Набор массы</label>
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="mass" id="mass-gathering">
+              <label class="label" for="mass-gathering">Набор массы</label>
             </li>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="advice" id="no-savvy">
-              <label for="no-savvy">Не знаю (нужен Ваш совет)</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend class="program-form__legend">Контактные данные (владельца кота)</legend>
-          <ul>
-            <li class="program-form__item">
-              <label for="email">E-mail:<sup>*</sup></label>
-              <input class="program-form__input-text input-text input-text--icon" type="email" name="email" id="email" placeholder="KUKLACHEV@GMAIL.COM">
-            </li>
-            <li class="program-form__item">
-              <label for="tel">Телефон:<sup>*</sup></label>
-              <input class="program-form__input-text input-text input-text--icon" type="tel" name="tel" id="tel" placeholder="8 (960)900 60 90">
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="advice" id="no-savvy">
+              <label class="label" for="no-savvy">Не знаю (нужен Ваш совет)</label>
             </li>
           </ul>
         </fieldset>
-        <fieldset>
-          <legend class="program-form__legend">Комментарий</legend>
-          <ul>
-            <li class="program-form__item">
-              <textarea class="program-form__textarea textarea-comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+        <fieldset class="picking-program__fieldset">
+          <legend class="picking-program__legend">Контактные данные (владельца кота)</legend>
+          <ul class="picking-program__list">
+            <li class="picking-program__item">
+              <label class="label" for="email">E-mail:<sup>*</sup></label>
+              <input class="picking-program__input-text input-text input-text--icon" type="email" name="email" id="email" placeholder="KUKLACHEV@GMAIL.COM">
+            </li>
+            <li class="picking-program__item">
+              <label class="label" for="tel">Телефон:<sup>*</sup></label>
+              <input class="picking-program__input-text input-text input-text--icon" type="tel" name="tel" id="tel" placeholder="8 (960)900 60 90">
             </li>
           </ul>
         </fieldset>
-        <fieldset>
-          <legend class="program-form__legend">Дополнительно</legend>
-          <ul>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
-              <label for="sweetener">Сахарозаменитель</label>
-            </li>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="water" id="water">
-              <label for="water">Питьевая вода</label>
-            </li>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="milk" id="milk">
-              <label for="milk">Молоко</label>
-            </li>
-            <li class="program-form__item">
-              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="vitamins" id="vitamins">
-              <label for="vitamins">Витамины</label>
+        <fieldset class="picking-program__fieldset">
+          <legend class="picking-program__legend">Комментарий</legend>
+          <ul class="picking-program__list">
+            <li class="picking-program__item">
+              <textarea class="picking-program__textarea textarea-comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </li>
           </ul>
         </fieldset>
-        <button class="program-form__button button">Отправить заявку</button>
+        <fieldset class="picking-program__fieldset">
+          <legend class="picking-program__legend">Дополнительно</legend>
+          <ul class="picking-program__list">
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
+              <label class="label" for="sweetener">Сахарозаменитель</label>
+            </li>
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="water" id="water">
+              <label class="label" for="water">Питьевая вода</label>
+            </li>
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="milk" id="milk">
+              <label class="label" for="milk">Молоко</label>
+            </li>
+            <li class="picking-program__item">
+              <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="vitamins" id="vitamins">
+              <label class="label" for="vitamins">Витамины</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button class="picking-program__button button button--theme-green">Отправить заявку</button>
       </form>
-      <small class="program-form__footnote program-form__footnote--top">
+      <small class="picking-program__footnote picking-program__footnote--top">
         <sup>*</sup> — Обязательные поля
       </small>
     </section>
