--- a/source/catalog.html
+++ b/source/catalog.html
@@ -180,67 +180,81 @@
             <a class="card-product__button button">Заказать</a>
           </article>
         </li>
+        <li class="catalog__item card-product">
+          <article class="card-product__item more-products">
+            <b class="more-product__all-goods">Показать еще 100500 товаров</b>
+            <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
+            <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
+          </article>
+        </li>
       </ul>
-      <section class="more-products">
-        <b class="more-product__all-goods">Показать еще 100500 товаров</b>
-        <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
-        <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
-      </section>
-      <section class="additional-products">
-        <h2 class="additional-products__title">Дополнительные товары</h2>
-        <ul class="additional-products__list">
-          <li class="additional-products__item">
-            <h3 class="additional-products__heading">Сахарозаменитель</h3>
-            <table class="additional-products__characteristics">
-              <tr>
-                <td class="additional-products__field">1 упаковка</td>
-                <td class="additional-products__value">100 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__heading">Питьевая вода</h3>
-            <table class="additional-products__characteristics">
-              <tr>
-                <td class="additional-products__field">5 литров</td>
-                <td class="additional-products__value">50 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__heading">Молоко</h3>
-            <table class="additional-products__characteristics">
-              <tr>
-                <td class="additional-products__field">1 литр</td>
-                <td class="additional-products__value">100 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__button button" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__heading">Витамины</h3>
-            <table class="additional-products__characteristics">
-              <tr>
-                <td class="additional-products__field">1 упаковка (30 г)</td>
-                <td class="additional-products__value">300 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__button button" href="#">Заказать</a>
-          </li>
-        </ul>
-      </section>
-      <section class="promo">
-        <b class="promo__slogan">Закажите все и получите чехол для кота в подарок!</b>
-      </section>
+      <div class="catalog__wrapper-additional-products">
+        <section class="catalog__additional-products additional-products">
+          <h2 class="additional-products__title">Дополнительные товары</h2>
+          <ul class="additional-products__list">
+            <li class="additional-products__item">
+              <div class="additional-products__wrapper">
+                <h3 class="additional-products__heading">Сахарозаменитель</h3>
+                <table class="additional-products__characteristics">
+                  <tr>
+                    <td class="additional-products__field">1 упаковка</td>
+                    <td class="additional-products__value">100 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <a class="additional-products__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <div class="additional-products__wrapper">
+                <h3 class="additional-products__heading">Питьевая вода</h3>
+                <table class="additional-products__characteristics">
+                  <tr>
+                    <td class="additional-products__field">5 литров</td>
+                    <td class="additional-products__value">50 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <a class="additional-products__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <div class="additional-products__wrapper">
+                <h3 class="additional-products__heading">Молоко</h3>
+                <table class="additional-products__characteristics">
+                  <tr>
+                    <td class="additional-products__field">1 литр</td>
+                    <td class="additional-products__value">100 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <a class="additional-products__button button" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <div class="additional-products__wrapper">
+                <h3 class="additional-products__heading">Витамины</h3>
+                <table class="additional-products__characteristics">
+                  <tr>
+                    <td class="additional-products__field">1 упаковка (30 г)</td>
+                    <td class="additional-products__value">300 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <a class="additional-products__button button" href="#">Заказать</a>
+            </li>
+          </ul>
+        </section>
+        <section class="promo">
+          <b class="promo__slogan">Закажите все и получите чехол для кота в подарок!</b>
+        </section>
+      </div>
     </section>
-    <section class="cooperation">
-      <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </section>
-    <section class="map">
-      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+    <section class="contacts">
+      <section class="contacts__cooperation cooperation">
+        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+      <section class="contacts__map map">
+        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+      </section>
     </section>
   </main>
 
@@ -261,8 +275,7 @@
       </ul>
     </section>
     <section class="page-footer__copyright copyright">
-      <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </section>
   </footer>
 
