--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,12 +9,12 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-image" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
-      <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+    <nav class="main-nav main-nav--closed">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a class="site-list__link" href="index.html">Главная</a>
@@ -181,11 +181,9 @@
           </article>
         </li>
         <li class="catalog__item card-product">
-          <article class="card-product__item more-products">
-            <b class="more-product__all-goods">Показать еще 100500 товаров</b>
-            <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
-            <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
-          </article>
+          <b class="more-product__all-goods">Показать еще 100500 товаров</b>
+          <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
+          <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
         </li>
       </ul>
       <div class="catalog__wrapper-additional-products">
@@ -198,7 +196,7 @@
                 <table class="additional-products__characteristics">
                   <tr>
                     <td class="additional-products__field">1 упаковка</td>
-                    <td class="additional-products__value">100 Р.</td>
+                    <td class="additional-products__field">100 Р.</td>
                   </tr>
                 </table>
               </div>
@@ -243,7 +241,7 @@
           </ul>
         </section>
         <section class="promo">
-          <b class="promo__slogan">Закажите все и получите чехол для кота в подарок!</b>
+          <b class="promo__slogan">Закажите все<br>и получите чехол для<br>кота в подарок!</b>
         </section>
       </div>
     </section>
@@ -264,13 +262,13 @@
       <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+          <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
       </ul>
     </section>
@@ -278,6 +276,23 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </section>
   </footer>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
 
 </body>
 </html>
