--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
   <main class="page-main">
     <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
     <section class="page-main__program-banner program-banner">
-      <h2 class="program-banner__heading">Функциональное питание для котов</h2>
+      <h2 class="program-banner__heading">Функциональное<br>питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
       <a class="program-banner__button button button--theme-green" href="program-form.html">Подобрать программу</a>
       <img class="program-banner__product" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Продукт Cat Energy с курицей">
@@ -87,7 +87,7 @@
     </section>
     <section class="contacts">
       <section class="contacts__cooperation cooperation">
-        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+        <b class="cooperation__heading">Приглашаем <br> к сотрудничеству дилеров!</b>
         <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </section>
       <section class="contacts__map map">
@@ -102,13 +102,13 @@
       <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+          <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
       </ul>
     </section>
