--- a/source/program-form.html
+++ b/source/program-form.html
@@ -9,17 +9,17 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-image" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
-      <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+    <nav class="main-nav main-nav--closed">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a class="site-list__link" href="index.html">Главная</a>
         </li>
-        <li class="site-list__item">
+        <li class="site-list__item site-list__item--active">
           <a class="site-list__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="site-list__item site-list__item--active">
@@ -116,12 +116,14 @@
         <sup>*</sup> — Обязательные поля
       </small>
     </section>
-    <section class="cooperation">
-      <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </section>
-    <section class="map">
-      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+    <section class="contacts">
+      <section class="contacts__cooperation cooperation">
+        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+      <section class="contacts__map map">
+        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+      </section>
     </section>
   </main>
 
@@ -131,13 +133,13 @@
       <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+          <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
       </ul>
     </section>
@@ -146,6 +148,23 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
     </section>
   </footer>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
 
 </body>
 </html>
