--- a/source/program-form.html
+++ b/source/program-form.html
@@ -35,21 +35,21 @@
       <p class="picking-program__text">Заполните анкету и мы подберем программу питания для Вашего кота</p>
       <form class="picking-program__form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="picking-program__fieldset">
-          <legend class="visually-hidden">Общие данные</legend>
+          <h2 class="visually-hidden">Общие данные</h2>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <label class="picking-program__label label">Имя:<sup>*</sup>
-                <input class="picking-program__input-text input-text" type="text" name="name" placeholder="Барсик">
+              <label class="picking-program__label label"><span>Имя:<sup>*</sup></span>
+                <input class="picking-program__input-text input-text input" type="text" name="name" placeholder="Барсик">
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label label">Вес (кг):<sup>*</sup>
-                <input class="picking-program__input-text input-text" type="text" name="heft" placeholder="7">
+              <label class="picking-program__label label"><span>Вес (кг):<sup>*</sup></span>
+                <input class="picking-program__input-text input-text input" type="text" name="heft" placeholder="7">
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="picking-program__label label">Возраст (лет):
-                <input class="picking-program__input-text input-text" type="text" name="age" placeholder="7">
+              <label class="picking-program__label label"><span>Возраст (лет):</span>
+                <input class="picking-program__input-text input-text input" type="text" name="age" placeholder="7">
               </label>
             </li>
           </ul>
@@ -58,17 +58,17 @@
           <legend class="visually-hidden">Цель программы</legend>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="diet" checked>
               Похудение</label>
             </li>
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="mass">
               Набор массы</label>
             </li>
             <li class="picking-program__item">
-              <label class="label" for="no-savvy">
+              <label class="picking-program__label-toogle label" for="no-savvy">
                 <input class="visually-hidden picking-program__input-radio input-radio" type="radio" name="goal-program" value="advice">
               Не знаю (нужен Ваш совет)</label>
             </li>
@@ -78,13 +78,13 @@
           <legend class="picking-program__legend">Контактные данные (владельца кота)</legend>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <label class="label">E-mail:<sup>*</sup>
-                <input class="picking-program__input-text input-text input-text--icon" type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM">
+              <label class="picking-program__label label"><span>E-mail:<sup>*</sup></span>
+                <input class="picking-program__input-text input-text input input-text--icon" type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM">
               </label>
             </li>
             <li class="picking-program__item">
-              <label class="label">Телефон:<sup>*</sup>
-                <input class="picking-program__input-text input-text input-text--icon" type="tel" name="tel" placeholder="8 (960)900 60 90">
+              <label class="picking-program__label label"><span>Телефон:<sup>*</sup></span>
+                <input class="picking-program__input-text input-text input input-text--icon" type="tel" name="tel" placeholder="8 (960)900 60 90">
               </label>
             </li>
           </ul>
@@ -93,7 +93,7 @@
           <legend class="picking-program__legend">Комментарий</legend>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <textarea class="picking-program__textarea textarea-comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+              <textarea class="picking-program__textarea" name="comment" rows="6" placeholder="Расскажите обо всех повадках кота"></textarea>
             </li>
           </ul>
         </fieldset>
@@ -101,22 +101,22 @@
           <legend class="picking-program__legend">Дополнительно</legend>
           <ul class="picking-program__list">
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="sweetener" checked>
               Сахарозаменитель</label>
             </li>
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="water">
               Питьевая вода</label>
             </li>
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="milk">
               Молоко</label>
             </li>
             <li class="picking-program__item">
-              <label class="label">
+              <label class="picking-program__label-toogle label">
                 <input class="visually-hidden picking-program__input-checkbox input-checkbox" type="checkbox" name="vitamins">
               Витамины</label>
             </li>
